# SkyPro_drf_django_project

./: .env.example  .gitignore  README.md  pyproject.toml
config/: settings.py  urls.py
materials/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
materials/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/fixtures/: payments.json
users/management/commands/: fill_payments.py
users/migrations/: 0001_initial.py  0002_payment.py
