[project]
name = "skypro-drf-django-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Viktor",email = "klarkkent0314@gmail.com"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "django (>=6.0.5,<7.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "djangorestframework (>=3.17.1,<4.0.0)",
    "djangorestframework-stubs (>=3.17.0,<4.0.0)",
    "django-filter (>=25.2,<26.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[dependency-groups]
lint = [
    "black (>=26.3.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)"
]
environment = [
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[tool.black]
# Максимальная длина строки
line-length = 119
# Файлы, которые не нужно форматировать
exclude = '''
(
  /(
      \.eggs         # Исключить несколько общих каталогов
    | \.git          # в корне проекта
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
  | foo.py           # Также отдельно исключить файл с именем foo.py
                     # в корне проекта
)
'''


[tool.isort]
# максимальная длина строки
line_length = 119
